syntax = "proto3";
package kaf.api;
option go_package = "api";

message ListClustersRequest {}

message ListClustersResponse { repeated Cluster clusters = 1; }

message Cluster {
  string name = 1;
}

message ConnectClusterRequest {
  string name = 1;
}

message ConnectClusterResponse { }

service ClusterService {
  rpc ListClusters(ListClustersRequest) returns (ListClustersResponse);
  rpc ConnectCluster(ConnectClusterRequest) returns (ConnectClusterResponse);
}
